--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -161,6 +161,20 @@
     margin-right:0;
 }
 
+.error-message{
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+}
+
+.error-message code{
+    display: block;
+    margin:10px 0;
+}
+
 /* ПЕРЕКРЫТИЕЙ СТИЛЕЙ TOGGLE WIDGET */
 .onoffswitch{
     float:right;
