--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -1,202 +1,18 @@
-.sm-header div.sm-add-text-box{
-    font-size: 15px;
-    text-transform: uppercase;
-    text-align: center;
-    -webkit-transition: all 200ms ease-out;
-    -moz-transition: all 200ms ease-out;
-    -ms-transition: all 200ms ease-out;
-    -o-transition: all 200ms ease-out;
-    transition: all 200ms ease-out;
+.margin-top5{
+    margin-top:5px;
 }
-
-.sm-header div.sm-add-text-box a:hover{
-    background: #f1f1f1;
-    color:#808080;
+.margin-top10{
+    margin-top:10px;
 }
-
-.sm-header div.sm-add-text-box a{
-    display: block;
-    padding: 15px;
-    color:#757575;
-    background: #ddd;
-    text-decoration: none;
-}
-
-.sm-text-list-item{
-    border:1px solid #ddd;
-    margin-bottom:10px;
-    padding:10px;
-}
-
-.sm-text-list-item > .sm-text-list-item-row{
-    margin-bottom:10px;
-}
-
-.sm-text-list-item-header{
-    font-size: 14px;
-    text-transform: uppercase;
-    color: #777;
-    margin-top: 5px;
-}
-.sm-text-list-item-header .glyphicon{
-    margin-right: 10px;
-    color: #555;
-}
-
-.sm-text-list-item-control{
-    text-align: right;
-    cursor: pointer;
-}
-
-.sm-text-list-item-control > a{
-    font-size: 18px;
-    color: #929292;
-    opacity: 0.5;
-    -webkit-transition : opacity 300ms ease-out;
-    -moz-transition    : opacity 300ms ease-out;
-    -ms-transition     : opacity 300ms ease-out;
-    -o-transition      : opacity 300ms ease-out;
-    transition         : opacity 300ms ease-out;
-}
-
-.sm-text-list-item-control:hover > a{
-    font-size: 18px;
-    color: #929292;
-    cursor: pointer;
-    opacity: 1;
-}
-.sm-text-list-item-menu {
-    position: absolute;
-    top:20px;
-    border: 1px solid #ddd;
-    background: #fff;
-    z-index: 1;
-    box-shadow: 1px 1px 10px -5px #757575;
-    display:none;
-    -webkit-transition : all 100ms ease-in;
-    -moz-transition    : all 100ms ease-in;
-    -ms-transition     : all 100ms ease-in;
-    -o-transition      : all 100ms ease-in;
-    transition         : all 100ms ease-in;
-}
-
-.sm-text-list-item-menu > a {
-    padding: 10px 25px;
-    display: block;
-    text-align: left;
-    font-size: 10px;
-    text-transform: uppercase;
-    color: #757575;
-}
-
-.sm-text-list-item-menu > a:hover {
-    color:#757575;
-    text-decoration: none;
-    background: #ddd;
-}
-
-.sm-text-list-item-text{
-    border-bottom: 1px solid #E0E0E0;
-    background: #fbfbfb;
-    padding-bottom: 5px;
-}
-.sm-empty-text{
-    color:#FF6464;
-    font-weight: bold;
-}
-.sm-text-list-item-template-param{
-    display: inline-block;
-    color:#fff;
-    margin-bottom: 5px;
-}
-.sm-text-list-item-template-param > span{
-    padding: 5px;
-    font-size: 12px;
-    text-shadow: 0px 1px  #555;
-}
-.sm-text-list-item-template-param > span:first-child{
-    background: #5cb85c;
-    border-radius:4px 0 0 4px;
-}
-
-.sm-text-list-item-template-param > span:last-child{
-    background: #555;
-    border-radius:0 4px 4px 0;
-}
-
-.sm-text-update-header {
-    border-bottom: 2px solid #9E9E9E;
-    margin-bottom: 15px;
-}
-.sm-text-update-header h3{
+.margin-top15{
     margin-top:15px;
 }
-
-.sm-text-update-bottom {
-    border-top: 2px solid #9E9E9E;
-    padding-top:10px;
-    text-align: right;
+.margin-top20{
+    margin-top:20px;
 }
-
-.seo-text-update-template-block{
-    padding: 10px;
-    border: 1px solid #ddd;
-    background: #FCFCFC;
-    color: #666;
-    text-align: justify;
+.margin-top25{
+    margin-top:25px;
 }
-.but-remove {
-    display     : block;
-    line-height : 34px;
-    cursor      : pointer;
-    color       : #d9534f;
-    text-decoration: none;
+.margin-top30{
+    margin-top:30px;
 }
-.but-remove:hover {
-    color       : #d9534f;
-    opacity: 0.8;
-}
-
-.template-control .row{
-    margin-right:0;
-}
-
-.error-message{
-    background-color: #f2dede;
-    border-color: #ebccd1;
-    color: #a94442;
-    padding: 15px;
-    margin-bottom: 20px;
-    border-radius: 4px;
-}
-
-.error-message code{
-    display: block;
-    margin:10px 0;
-}
-
-/* ПЕРЕКРЫТИЕЙ СТИЛЕЙ TOGGLE WIDGET */
-.onoffswitch{
-    float:right;
-    width: 130px !important;
-
-}
-.onoffswitch-switch{
-    right: 100px !important;
-
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right : 0px !important;
-}
-
-.onoffswitch-inner{
-}
-.onoffswitch-inner:after{
-    font-size: 9px !important;
-    content: 'НЕ ОПУБЛИКОВАН' !important;
-}
-.onoffswitch-inner:before{
-    font-size: 9px !important;
-    content: 'ОПУБЛИКОВАН' !important;
-}
-/* ПЕРЕКРЫТИЕЙ СТИЛЕЙ TOGGLE WIDGET */
